# Aegis-Suite

./: .coverage  .gitignore  .mailmap  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  FINAL_100_SCORE_AUDIT.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  audit_log.py  auth.py  bot_manager.py  build_exe.py  clean_release.py  config.example.json  first_run_wizard.py  leveling.py  music_manager.py  pyproject.toml  requirements.txt  run.py  secret_store.py  setup.iss  utils.py  web_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  release.yml  verify.yml
.hypothesis/tmp/: tmp0_fqeggz  tmp2204sw5c  tmp31kqiy_f  tmp3_1nyxoi  tmp55n2f2uq  tmp5ov3c_8d  tmp6293zoy0  tmp6a3hex_x  tmp8uvgwx76  tmpa21ven3u  tmpa8ab4khx  tmpaew142qj  tmpb4fr4u9s  tmpcbkpxbku  tmpdvp2enyj  tmpg7n1x9x6  tmpgy08kkyy  tmph1p2vk0s  tmpjdybsd7n  tmpkmlxzqyp  tmpljzkfna0  tmpm9h8uwm4  tmpm9s9ar7v  tmpmee4ws7k  tmpmx3jt02h  tmpn9bdqsw1  tmpngh_xpav  tmpnrlfhtu1  tmpotyjgnk5  tmppplqnnv8  tmppytjlowz  tmpr_ftznk8  tmptfv9rejm  tmpu5pms3is  tmpurjjis58  tmpwf6ianc9  tmpwfwmw5_6  tmpwg0jgyc8  tmpyrk1it_z  tmpz9tresoz
aegis/: __init__.py  __main__.py
aegis/analytics/: __init__.py  aggregator.py  engine.py  recommender.py  smart_features.py
aegis/bot/: __init__.py  anti_raid.py  auditor.py  bot_manager.py  cog_loader.py  commands.py  config_doctor.py  giveaways.py  leveling.py  music.py  music_permissions.py  permission_analyzer.py  permissions.py  restructuring.py  runner.py  security_center.py  slowmode_tracker.py  tickets.py
aegis/bot/cogs/: raid.py  (+10 more)
aegis/config/: __init__.py  loader.py  sanitizer.py  schema.py
aegis/core/: __init__.py  app_core.py  audit_log.py  auth.py  config_history.py  config_manager.py  config_migration.py  encryption.py  flags.py  health.py  lifecycle.py  logging_setup.py  observability.py  paths.py  performance.py  secret_store.py  single_instance.py  state.py  utils.py
aegis/db/: analytics_models.py  engine.py  legacy_import.py  maintenance.py  migrate_json_to_sqlite.py  models.py
aegis/diagnostics/: __init__.py  packager.py
aegis/intelligence/: __init__.py  activity.py  automation.py  fix_center.py  raid_detector.py  recommendations.py  registry.py  sentiment.py  spam_detector.py  timeline.py
aegis/templates_engine/: __init__.py  apply.py  io.py  model.py  registry.py
aegis/web/: __init__.py  app.py  middleware.py  recovery_ui.py  route_helpers.py  server.py  wizard_ui.py
aegis_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
architecture/: schema.md
docs/changelog-archive/: ACCESSIBILITY_FIXES_SUMMARY.md  ALL_FIXES_SUMMARY.md  BACKEND_FIXES_SUMMARY.md  BUG_FIXES_SMART_FEATURES.md  BUG_FIXES_SUMMARY.md  BUTTON_FIX_SUMMARY.md  COG_REFACTORING_SUMMARY.md  COMMAND_CENTER_SUMMARY.md  CONFIG_SYSTEM_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  FIX_AUTO_ROTATE_SUMMARY.md  FIX_BUTTONS_SUMMARY.md  FRONTEND_REVIEW.md  FRONTEND_REVIEW_SUMMARY.md  LOCAL_INTELLIGENCE_SUMMARY.md  OBSERVABILITY_SUMMARY.md  OPTIMIZATION_REVIEW_REPORT.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PRODUCTION_HARDENING_SUMMARY.md  SMART_FEATURES_SUMMARY.md  TEMPLATES_FIXES_SUMMARY.md  TESTING_SUMMARY.md
docs/source/: conf.py  index.md
scripts/: clean_release.py
static/: app.js  index.html  responsive.css  style.css
static/css/: google-fonts.css
static/i18n/: en.json  es.json
templates/: .gitkeep
tests/: conftest.py  test_all_features_comprehensive.py  test_analytics.py  test_anti_raid.py  test_api.py  test_auth.py  test_auth_aggressive.py  test_automod_enforcement.py  test_backup_aggressive.py  test_backup_mtime.py  test_bypass_removal.py  test_config_encryption.py  test_config_persistence.py  test_config_preservation.py  test_cyrils_features.py  test_diagnostics_redaction.py  test_embed_presets.py  test_embed_reactions.py  test_entrypoint_delegation.py  test_first_run_wizard.py  test_giveaway_deadlock.py  test_hardening.py  test_hardening_v2.py  test_hosting_mode_selector.py  test_leveling_unification.py  test_lifecycle.py  test_lifecycle_checks.py  test_managed_hosting.py  test_moderation_aggressive.py  test_music_inactivity.py  test_music_permissions.py  test_music_playlists.py  test_paths_and_logging.py  test_permissions_resolver.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase3.py  test_phase4.py  test_phase6.py  (+17 more)
(+79 files in other folders)
