[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-suite"
version = "2.2.2"
description = "Interactive server operations suite featuring a FastAPI dashboard and Discord bot."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Aegis Team", email = "maintainers@aegis-suite.org" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "discord.py[voice]>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
    "yt-dlp>=2023.3.3",
    "PyNaCl>=1.5.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
]

[project.scripts]
aegis = "aegis.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402", # Module level import not at top of file
    "F401", # Unused imports
    "F841", # Local variable assigned but unused
    "F811", # Redefinition of unused name
    "E501", # Line too long
    "W291", # Trailing whitespace
    "W293", # Blank line contains whitespace
]

[tool.black]
line-length = 120
target-version = ['py312']
